# ghc-darwin8-ppc

./: .gitignore  CLAUDE.md  README.md
demos/: .gitignore  README.md  v0.1.0-hello.hi  v0.1.0-hello.hs  v0.10.0-mandel-prof.hs  v0.11.0-stage2-native.sh  v0.2.0-pi.hi  v0.2.0-pi.hs  v0.3.0-self-locate.hs  v0.5.0-runghc-args.hi  v0.5.0-runghc-args.hs  v0.6.0-runtime-load.hs  v0.6.1-haskell-load.hs  v0.7.0-iserv-banner.sh  v0.7.1-eprintf-stub.hi  v0.7.1-eprintf-stub.hs  v0.7.2-large-load.hs  v0.8.0-th-splice.hs  v0.8.1-tcp-echo.hs  v0.9.0-https-get.hs
demos/v0.4.0-cabal-aeson/: Main.hs  cabal.project  v040-aeson.cabal
docs/: cabal-cross.md  ghc-version-choice.md  plan.md  roadmap.md  state.md
patches/: 0001-libffi-gate-go-closure-on-ppc-darwin.patch  0002-restore-32bit-machotypes-for-ppc.patch  0003-restore-loadarchive-ppc-darwin.patch  0004-macho-c-ppc-symbol-extras-and-reloc-include.patch  0005-posixsource-h-no-posix-c-source-on-darwin.patch  0006-quickcross-static-only.patch  0007-rts-gate-hs_xchg64-on-64bit.patch  0008-cmmtoc-split-w64-double-on-32bit.patch  0009-restore-ppc-runtime-macho-loader.patch  0010-hadrian-cross-iserv.patch  0011-rts-eprintf-stub.patch  0012-rts-ppc-contiguous-mmap-and-symbol-extras-near-text.patch  0013-binary-generic-direct-numeric-guards.patch  0014-ghci-bco-byteswap-on-endian-mismatch.patch  0015-rts-rtsutils-tiger-strnlen-shim.patch
scripts/: cross-env.sh  deploy-stage2.sh  ghc-stage2-wrapper.sh  install-ghc-704-on-tiger.sh  install-name-tool-shim.sh  install.sh  make-cross-cc-wrapper.sh  pgmi-shim.sh  ppc-cc.sh  ppc-ld-fake.sh  (+4 more)
(+197 files in other folders)
