cabal-version:      2.0
name:               v040-aeson
version:            0.1.0.0
synopsis:           v0.4.0 demo — cabal + aeson on Tiger PPC
build-type:         Simple

executable v040-aeson
    main-is:          Main.hs
    build-depends:    base       >= 4 && < 5
                    , aeson
                    , bytestring
    default-language: Haskell2010
